# Candidates_ETL

./: .env  .gitignore  README.md  pyproject.toml
config/: conexion_db.py
cuadernos/: 001_extract.ipynb  002_candidatosEDA.ipynb  003_cleanDataLoad.ipynb
