[project]
name = "workshop1"
version = "0.1.0"
description = ""
authors = [
    {name = "luzangelacarabali",email = "luz_angela.carabali@uao.edu.co"}
]
readme = "README.md"
packages = [{include = "workshop1"}]
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "numpy (>=2.2.3,<3.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "sqlalchemy (>=2.0.38,<3.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "notebook (>=7.3.2,<8.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
